[project]
name = "ques_improv"
version = "0.1.0"
description = "Ques_Improv using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
ques_improv = "ques_improv.main:run"
run_crew = "ques_improv.main:run"
train = "ques_improv.main:train"
replay = "ques_improv.main:replay"
test = "ques_improv.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
